# SNP_Primer_Pipeline3

./: .gitignore  FINAL_CONSISTENCY_SUMMARY.md  FULL_PIPELINE_TEST_REPORT.md  README.md  README_zh.md  pyproject.toml  test_end_to_end.py  test_full_pipeline.py
cli_test_output/: blast_out.txt  flanking_sequences.fa  for_blast.fa
cli_test_output/SNP_chr7A-7659/: KASP_primers_chr7A-7659.txt  flanking_chr7A-7659.fa
cli_test_output_comparison_optimized/SNP_chr7A-7659/: KASP_primers_chr7A-7659.txt  alignment_chr7A-7659.fa
cli_test_output_comparison_optimized/SNP_chr7A-7716/: flanking_chr7A-7716.fa
consistency_reports/: comprehensive_consistency_report.md  consistency_summary.json
docs/reports/: CONSISTENCY_TEST_STATUS.md  END_TO_END_TEST_REPORT.md  FINAL_COMPLETION_REPORT.md  FULL_PIPELINE_TEST_REPORT.md
scripts/: generate_consistency_report.py  run_consistency_tests.py  test_output_inspection.py
src/snp_primer_pipeline/: __init__.py  __main__.py  config.py  exceptions.py  main.py  models.py
src/snp_primer_pipeline/core/: __init__.py  alignment.py  (+3 more)
test_data/v2_examples/: All_alignment_raw.fa  Potential_CAPS_primers.tsv  Potential_KASP_primers.tsv  alignment_raw_chr7A-7659.fa  alignment_raw_chr7A-7716.fa  blast_out.txt  flanking_temp_marker_chr7A-7659_chr7A_Y_501.txt.fa  flanking_temp_marker_chr7A-7716_chr7A_R_501.txt.fa  renamed_flanking_temp_marker_chr7A-7659_chr7A_Y_501.txt.fa  renamed_flanking_temp_marker_chr7A-7716_chr7A_R_501.txt.fa  temp_marker_chr7A-7659_chr7A_Y_501.txt  temp_marker_chr7A-7716_chr7A_R_501.txt  temp_range.txt
test_output/SNP_chr7A-7716/: flanking_chr7A-7716.fa
test_output_debug/: flanking_sequences.fa
test_output_debug/SNP_chr7A-7659/: KASP_primers_chr7A-7659.txt
test_output_v2fix/SNP_chr7A-7659/: KASP_primers_chr7A-7659.txt  flanking_chr7A-7659.fa
tests/: __init__.py  test_basic_structure.py  test_end_to_end.py  test_integration.py
tests/consistency/: __init__.py  conftest.py  test_alignment_consistency.py  test_blast_consistency.py  test_caps_consistency.py  test_e2e_consistency.py  test_flanking_consistency.py  test_kasp_consistency.py  test_parser_consistency.py
tests/manual/: test_e2e_real.py  test_full_pipeline.py
tests/utils/: __init__.py  consistency_reporter.py  output_comparator.py  reference_loader.py
v3_test_output/SNP_chr7A-7659/: KASP_primers_chr7A-7659.txt  alignment_chr7A-7659.fa
v3_test_output/SNP_chr7A-7716/: KASP_primers_chr7A-7716.txt  flanking_chr7A-7716.fa
v3_test_output_final/SNP_chr7A-7659/: KASP_primers_chr7A-7659.txt
v3_test_output_final/SNP_chr7A-7716/: KASP_primers_chr7A-7716.txt
v3_test_output_final_v2muscle/: flanking_sequences.fa
v3_test_output_final_v2muscle2/SNP_chr7A-7659/: KASP_primers_chr7A-7659.txt  flanking_chr7A-7659.fa
v3_test_output_final_v2muscle2/SNP_chr7A-7716/: KASP_primers_chr7A-7716.txt  alignment_chr7A-7716.fa
v3_test_output_final_v2muscle3/SNP_chr7A-7716/: KASP_primers_chr7A-7716.txt
(+15 files in other folders)
